FIX: Attachments window size (#1813)
* Attachments screen was vertically overflowing
* Added attachments to AllDataTypes

--- a/frontend-html/src/gui/Components/ScreenElements/HBoxVBox.module.scss
+++ b/frontend-html/src/gui/Components/ScreenElements/HBoxVBox.module.scss
@@ -21,7 +21,6 @@ along with ORIGAM. If not, see <http://www.gnu.org/licenses/>.
   flex-shrink: 0;
 
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: row;
 
